--- a/15拖拽的组件开发.html
+++ b/15拖拽的组件开发.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>无标题文档</title>
 <style>
-#div1{ width:100px; height:100px; background:red; position:absolute;}
+#div1{ width:100px; height:100px; background:olive; position:absolute;}
 #div2{ width:100px; height:100px; background:yellow; position:absolute; left:100px;}
 #div3{ width:100px; height:100px; background:blue; position:absolute; left:200px;}
 #div4{ width:100px; height:100px; background:green; position:absolute; left:300px;}
